feat: update POST auth/token api spec
